# a2a_network

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  install_docker.sh  pyproject.toml  requirements.txt  start.bat  start_all.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/feedback/: __main__.py  executor.py
agents/mcp_tools/: server.py
agents/normalizer/: __main__.py  executor.py
agents/orchestrator/: __main__.py  agent_registry.py  agentic_orchestrator.py  deliberation_loop.py  discussion_ledger.py  executor.py  flow_manager.py  models_routes.py  persona_catalog.py  plan_executor.py  planner.py  planner_routes.py  worker_spawner.py
agents/specialized/: __main__.py  agent_state.py  belief_updater.py  config_api.py  eristic.py  executor.py
common/: a2a_helpers.py  config.py  llm_provider.py  models.py  registry_client.py
docs/: a2a-protocol.md  agents.md  flow.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: sse.ts
frontend/src/components/: AgentPositionsChart.tsx  AgentRosterPanel.tsx  BeliefTrajectoryChart.tsx  ConsensusGauge.tsx  DebateGraph.tsx  DebateHeroSection.tsx  DebateTimeline.tsx  DiscussionLedgerView.tsx  HabermasTable.tsx  Markdown.tsx  PromptInput.tsx  RoleAvatar.tsx  VerdictDisplay.tsx
frontend/src/types/: index.ts
frontend/src/utils/: i18n.ts  modelLabel.ts
tests/: conftest.py
tests/e2e/: test_orchestrator_e2e.py
tests/unit/: test_agent_registry.py  test_agent_state.py  test_agentic_orchestrator.py  test_aporia_detection.py  test_belief_updater.py  test_deliberation_loop.py  test_discussion_ledger.py  test_eristic.py  test_mcp_whitelist.py  test_models.py  test_persona_catalog.py  test_plan_executor.py  test_planner.py  test_registry_client.py  test_worker_spawner.py
