[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-network"
version = "0.1.0"
description = "A2A protocol debate network - University project"
requires-python = ">=3.12"
dependencies = [
    # `http-server` is the real extra name (pip warns silently that `http`
    # doesn't exist). `sqlite` pulls in sqlalchemy for the task store.
    "a2a-sdk[http-server,sqlite]==1.0.0a0",
    "litellm>=1.55",
    "mcp>=1.0",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sse-starlette>=2.0",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

# Tell setuptools which top-level folders are Python packages. Without this,
# setuptools refuses the editable install ("Multiple top-level packages
# discovered in a flat-layout: ['agents', 'common', 'frontend']").
[tool.setuptools.packages.find]
include = ["agents*", "common*"]
exclude = ["frontend*", "tests*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
